--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "github-api",
+  "homepage": "https://Hyagocolares.github.io/ Desafio-Interface-ReactJS",
+  "name": " Desafio-Interface-ReactJS",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,6 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+      "gh-pages": "^3.1.0"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
